fixed gif credits and scroll down z-index order

--- a/static/style.css
+++ b/static/style.css
@@ -98,6 +98,9 @@ section#inicio{
     background-position: center;
     width: 100%;
     height: 100vh;
+    position:relative;
+    z-index: 9999;
+
 }
 
 section#inicio h2 {
